[tool.poetry]
name = "jk9-stock-alerts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [{include = "jk9_stock_alerts"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.7.2"
dynaconf = "^3.1.11"
schedule = "^1.1.0"
webdriver-manager = "^3.8.5"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
